--- a/src/components/splashthanks.astro
+++ b/src/components/splashthanks.astro
@@ -1,5 +1,4 @@
 ---
-import { generateImage } from "astro-eleventy-img";
 import { Icon } from "astro-icon";
 import HeroImage from "~/components/hero-image.astro";
 
@@ -18,8 +17,8 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       <div
         class="font-extrabold p-5 tracking-tighter text-center text-8xl gradient-text"
       >
-        Your app on IoT,
-        <br />like frosting on a cake
+        Thanks!
+        <br />You'll be hearing from us soon.
       </div>
     </h2>
   </div>
