--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -3,9 +3,9 @@ import { Icon } from "astro-icon";
 import ThemeSwitcher from "~/components/theme-switcher.astro";
 
 const navItems = [
-  { title: "Features", url: "#features" },
-  { title: "Compatibility", url: "#compatibility" },
-  { title: "Showcase", url: "#showcase" },
+  { title: "Services", url: "/#services" },
+  { title: "Team", url: "/#team" },
+  { title: "Contact Us", url: "/#contact" },
 ];
 ---
 
@@ -13,10 +13,9 @@ const navItems = [
   id="page-header"
   class="absolute bottom-0 z-10 flex items-center justify-between w-full px-8 py-4 text-white border-b border-transparent"
 >
-  <a class="flex items-center gap-3 hover:!text-default" href="#">
-    <h1 class="sr-only">Astro</h1>
-    <Icon name="logomark" class="h-10" />
-    <Icon name="wordmark" class="hidden h-4 sm:block" />
+  <a class="flex items-center gap-3 hover:!text-default" href="/#">
+    <h1 class="sr-only">Caketop</h1>
+    <Icon name="wordmark" class="hidden h-10 sm:block" />
   </a>
   <div>
     <div class="flex items-center gap-6">
