--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,28 +3,14 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Just ship less" id="intro">
+<ContentSection title="Operating systems as a service" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    Astro is a new kind of site builder for the
-    <span class="text-primary">modern</span> web.
-    <span class="text-primary">Lightning-fast</span>
-    performance meets <span class="text-primary">powerful</span> developer experience.
+    Caketop is your
+    <span class="text-primary">one-stop shop</span>
+    for IoT firmware and virtual machine images.
+    Stop worrying about
+    your platform and focus on
+    <span class="text-primary">your app</span>.
   </Fragment>
-  <div class="grid grid-cols-1 gap-2 sm:grid-cols-2">
-    <a
-      href="https://docs.astro.build/"
-      class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
-    >
-      <Icon pack="mdi" name="telescope" class="h-8" />
-      <span>Read the docs</span>
-    </a>
-    <a
-      href="https://astro.new/"
-      class="flex items-center justify-center gap-3 px-6 py-4 border-2 border-current"
-    >
-      <Icon pack="mdi" name="rocket" class="h-8" />
-      <span>Try it out</span>
-    </a>
-  </div>
 </ContentSection>
