--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -2,7 +2,7 @@
 import ContentSection from "~/components/content-section.astro";
 import { Icon } from "astro-icon";
 
-const features = [
+const services = [
   {
     title: "Your Choice Of Hardware",
     description:
@@ -42,10 +42,10 @@ const features = [
 ];
 ---
 
-<ContentSection title="Features" id="features">
+<ContentSection title="Services" id="services">
   <ul class="grid max-w-6xl grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
     {
-      features.map(({ title, description, icon }) => (
+      services.map(({ title, description, icon }) => (
         <li class="flex flex-col items-center gap-4 p-6 border border-default bg-offset">
           <div class="w-16 h-16 p-3 border-2 border-current rounded-full">
             <Icon name={icon} />
