Add analytics and botpoison

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -9,7 +9,7 @@ import ContentSection from "~/components/content-section.astro";
     and let us know what we can
     <span class="text-primary">build for you</span>.
   </Fragment>
-  <form action="https://submit-form.com/ZnF1nOju">
+  <form action="https://submit-form.com/ZnF1nOju" data-botpoison-public-key="pk_14b6d75d-379c-42e7-9c35-731a053fcb79">
     <div class="grid grid-cols-5 gap-4">
       <div class="text-right">
         <label for="name">Name</label>
