--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,8 @@ const description =
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <script src="https://unpkg.com/@botpoison/browser" async></script>
+    <script defer data-domain="caketop.app" src="https://stats.caketop.app/js/plausible.js"></script>
 
     <title>Caketop: Operating systems as a service</title>
     <meta name="description" content={description} />
