--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -21,6 +21,7 @@ const description =
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <script defer data-domain="caketop.app" src="https://stats.caketop.app/js/plausible.js"></script>
 
     <title>Caketop: Thank you!</title>
     <meta name="description" content={description} />
