--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -2,44 +2,69 @@
 import ContentSection from "~/components/content-section.astro";
 ---
 
-
 <ContentSection title="Contact Us" id="contact">
   <Fragment slot="lead">
     <span class="text-primary">Get in touch</span>
     and let us know what we can
     <span class="text-primary">build for you</span>.
   </Fragment>
-  <form action="https://submit-form.com/ZnF1nOju" data-botpoison-public-key="pk_14b6d75d-379c-42e7-9c35-731a053fcb79">
-    <div class="grid grid-cols-5 gap-4">
-      <div class="text-right">
-        <label for="name">Name</label>
-      </div>
-      <div class="col-span-4">
-        <input type="text" id="name" name="name" placeholder="Name" required=""
-        />
-      </div>
-      <div class="text-right">
-        <label for="email">Email</label>
-      </div>
-      <div class="col-span-4">
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Email"
-          required
-        />
-      </div>
-      <div class="text-right">
-        <label for="message">Message</label>
-      </div>
-      <div class="col-span-4">
-        <textarea id="message" name="message" placeholder="Message" required=""
-        ></textarea>
-      </div>
-      <div class="text-right col-span-5">
-        <button type="submit">Send</button>
-      </div>
+  <form
+    class="w-4/12"
+    action="https://submit-form.com/ZnF1nOju"
+    data-botpoison-public-key="pk_14b6d75d-379c-42e7-9c35-731a053fcb79"
+  >
+    <div class="relative">
+      <input
+        type="text"
+        id="name"
+        name="name"
+        placeholder=" "
+        required=""
+        class="block px-2.5 pb-2.5 pt-5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+      />
+      <label
+        for="name"
+        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] left-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4"
+        >Name
+      </label>
+    </div>
+    <div class="relative">
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder=" "
+        required=""
+        class="block px-2.5 pb-2.5 pt-5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+      />
+      <label
+        for="email"
+        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] left-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4"
+        >Email Address
+      </label>
+    </div>
+    <div class="relative">
+      <textarea
+        class="block px-2.5 pb-2.5 pt-5 w-full text-sm text-gray-900 bg-gray-50 dark:bg-gray-700 border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+        rows="5"
+        id="message"
+        name="message"
+        placeholder=" "
+        required=""></textarea>
+      <label
+        for="message"
+        class="absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-4 scale-75 top-4 z-10 origin-[0] left-2.5 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-4"
+        >Message
+      </label>
+    </div>
+    <div class="text-center p-5">
+      <input type="hidden" name="_redirect" value="https://caketop.app/thanks/"
+      />
+      <button
+        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+        type="submit"
+        >Send
+      </button>
     </div>
   </form>
 </ContentSection>
