--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -6,7 +6,7 @@ import "~/styles/index.css";
 const { site } = Astro;
 const image = new URL("social.jpg", site);
 const description =
-  "Caketop is your one-stop shop for IoT firmware and virtual machine images. Let your engineers stop worrying about your platform and focus on your app.";
+  "Caketop is your one-stop shop for IoT firmware and virtual machine images. Stop worrying about your platform and focus on your app.";
 ---
 
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
