Scale form for small screens

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -9,7 +9,7 @@ import ContentSection from "~/components/content-section.astro";
     <span class="text-primary">build for you</span>.
   </Fragment>
   <form
-    class="w-4/12"
+    class="xl:w-4/12 l:w-6/12 md:w-8/12 w-10/12"
     action="https://submit-form.com/ZnF1nOju"
     data-botpoison-public-key="pk_14b6d75d-379c-42e7-9c35-731a053fcb79"
   >
