--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -43,7 +43,7 @@ const navItems = [
       <ThemeSwitcher />
     </div>
     <div id="menu-modal" class="hidden modal" aria-hidden="true">
-      <div class="fixed inset-0 px-8 py-4 bg-default">
+      <div class="fixed inset-0 px-8 py-4 bg-slate-900">
         <div class="space-y-4" role="dialog" aria-modal="true">
           <header class="text-right">
             <button
