--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -15,10 +15,9 @@ const links = [
   <div class="absolute inset-0 overflow-hidden opacity-40">
     <HeroImage />
   </div>
-  <ul class="relative grid grid-cols-2 gap-4 sm:grid-cols-1">
+  <div class="relative">
     {
       links.map((link) => (
-        <li>
           <a
             class="flex items-center justify-center w-16 h-16 p-4 border-2 border-current rounded-full"
             href={link.url}
@@ -26,8 +25,7 @@ const links = [
             <span class="sr-only">{link.description}</span>
             <Icon class="h-full" name={link.icon} />
           </a>
-        </li>
       ))
     }
-  </ul>
+    </div>
 </footer>
