--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -31,7 +31,7 @@ const services = [
     title: "Delta Updates",
     description:
       "Stop wasting time and bandwidth and download only what has changed since the previous version. Rollback to previous versions without doubling your storage requirements.",
-    icon: "mdi:feather",
+    icon: "mdi:delta",
   },
   {
     title: "No Cloud? No Problem!",
