DRY things up by switching to a layout

--- a/src/components/splash.astro
+++ b/src/components/splash.astro
@@ -18,8 +18,7 @@ const sizes = "(min-width: 640px) 42vw, 67vw";
       <div
         class="font-extrabold p-5 tracking-tighter text-center text-8xl gradient-text"
       >
-        Your app on IoT,
-        <br />like frosting on a cake
+        <slot />
       </div>
     </h2>
   </div>
