--- a/src/pages/thanks.astro
+++ b/src/pages/thanks.astro
@@ -1,87 +1,11 @@
 ---
-import Header from "~/components/header.astro";
-import Splashthanks from "~/components/splashthanks.astro";
-import "~/styles/index.css";
-
-const { site } = Astro;
-const image = new URL("social.jpg", site);
-const description =
-  "Caketop is your one-stop shop for IoT firmware and virtual machine images. Stop worrying about your platform and focus on your app.";
+import Page from "~/layouts/Page.astro";
+import Splash from "~/components/splash.astro";
 ---
 
-<html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-    <script defer data-domain="caketop.app" src="https://stats.caketop.app/js/plausible.js"></script>
-
-    <title>Caketop: Thank you!</title>
-    <meta name="description" content={description} />
-
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="preload"
-      as="style"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
-      media="print"
-      onload="this.media='all'"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
-      />
-    </noscript>
-
-    <!-- social media -->
-    <meta property="og:title" content="Caketop: Operating systems as a service" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content={description} />
-    <meta property="og:image" content={image} />
-    <meta property="og:url" content={site} />
-    <meta name="twitter:card" content="summary_large_image" />
-
-    <!-- initialize theme -->
-    <script is:inline>
-      const themeSaved = localStorage.getItem("theme");
-
-      if (themeSaved) {
-        document.documentElement.dataset.theme = themeSaved;
-      } else {
-        const prefersDark = window.matchMedia(
-          "(prefers-color-scheme: dark)"
-        ).matches;
-        document.documentElement.dataset.theme = prefersDark ? "dark" : "light";
-      }
-
-      window
-        .matchMedia("(prefers-color-scheme: dark)")
-        .addEventListener("change", (event) => {
-          if (!localStorage.getItem("theme")) {
-            document.documentElement.dataset.theme = event.matches
-              ? "dark"
-              : "light";
-          }
-        });
-    </script>
-  </head>
-  <body
-    class="h-full overflow-x-hidden text-base bg-default text-default selection:bg-secondary selection:text-white"
-  >
-    <Header />
-    <Splashthanks />
-  </body>
-</html>
+<Page>
+  <Splash>
+    Thanks!
+    <br />You'll be hearing from us soon.
+  </Splash>
+</Page>
