--- a/src/components/jordemort.astro
+++ b/src/components/jordemort.astro
@@ -14,6 +14,6 @@ import jordemort from "~/assets/jordemort.jpg";
     />
   </a>
   <figcaption class="text-center">
-    <a href="https://jordemort.dev/">Jordan Webb</a><br />Founder
+    <a href="https://jordemort.dev/" class="font-semibold">Jordan Webb</a><br /><span class="text-sm">Founder</span>
   </figcaption>
 </figure>
