--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,6 +1,6 @@
 [data-theme="light"] {
   --color-primary: theme("colors.blue.500");
-  --color-secondary: theme("colors.indigo.500");
+  --color-secondary: theme("colors.blue.600");
   --color-text: theme("colors.gray.900");
   --color-text-offset: theme("colors.gray.600");
   --color-background: theme("colors.gray.50");
@@ -10,7 +10,7 @@
 
 [data-theme="dark"] {
   --color-primary: theme("colors.blue.400");
-  --color-secondary: theme("colors.indigo.400");
+  --color-secondary: theme("colors.blue.500");
   --color-text: theme("colors.gray.50");
   --color-text-offset: theme("colors.gray.400");
   --color-background: theme("colors.gray.900");
