--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon";
-import HeroImage from "~/components/hero-image.astro";
+import FooterImage from "~/components/footer-image.astro";
 
 const links = [
   {
@@ -13,7 +13,7 @@ const links = [
 
 <footer class="relative flex items-center justify-center h-64">
   <div class="absolute inset-0 overflow-hidden opacity-40">
-    <HeroImage />
+    <FooterImage />
   </div>
   <div class="relative">
     {
