Use other GitHub icon

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -6,7 +6,7 @@ const links = [
   {
     url: "https://github.com/caketop",
     description: "Caketop on GitHub",
-    icon: "fa-brands:github-alt",
+    icon: "fa-brands:github",
   },
 ];
 ---
