--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,12 @@ import Services from "~/components/services.astro";
 import Footer from "~/components/footer.astro";
 import Intro from "~/components/intro.astro";
 import Splash from "~/components/splash.astro";
-import Flipper from "~/components/flipper.astro";
+// import Flipper from "~/components/flipper.astro";
 ---
 
 <Page>
   <Splash>
-    Your app on <Flipper />
+    Your app on Linux,
     <br />like frosting on a cake
   </Splash>
   <div class="px-8 py-32 space-y-24">
