Remove weird spacing stuff

--- a/src/components/flipper.astro
+++ b/src/components/flipper.astro
@@ -104,8 +104,7 @@ const duration = String(rawDuration) + "s";
     {
       platforms.map((platform, i) => (
         <span class="flipper-item" style={"--delay: " + String(i * 2.5) + "s"}>
-          {" "}
-          {platform},{" "}
+          {platform}
         </span>
       ))
     }
