Change list of things

--- a/src/components/flipper.astro
+++ b/src/components/flipper.astro
@@ -4,11 +4,11 @@
 const platforms = [
   "Linux",
   "IoT",
-  "Cloud",
   "Docker",
-  "AWS",
   "VMware",
-  "GCP",
+  "Amazon EC2",
+  "Azure",
+  "Google Cloud",
   "OpenStack",
 ];
 
