--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,14 +3,14 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Operating systems as a service" id="intro">
+<ContentSection title="Linux consulting for cloud and IoT" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    Caketop is your
-    <span class="text-primary">one-stop shop</span>
-    for IoT firmware and virtual machine images.
-    Stop worrying about
-    your platform and focus on
-    <span class="text-primary">your app</span>.
+    Caketop is a Linux consulting firm.
+    We specialize in creating <span class="text-primary">customized Linux operating systems</span>.
+    We can create optimized
+    <span class="text-primary">container images</span> or
+    <span class="text-primary">virtual appliances</span> for your app,
+    or <span class="text-primary">firmware</span> for your IoT device.
   </Fragment>
 </ContentSection>
