--- a/src/components/jordemort.astro
+++ b/src/components/jordemort.astro
@@ -13,6 +13,11 @@ import jordemort from "~/assets/jordemort.jpg";
       class="rounded-full"
     /></a>
   <figcaption class="text-center">
-    <a href="https://jordemort.dev/" class="font-semibold">Jordan Webb</a><br /><span class="text-sm">Founder</span>
+    <a href="https://jordemort.dev/" class="font-semibold">Jordan Webb</a><br /><span class="text-sm">Proprietor</span>
   </figcaption>
 </figure>
+<p class="max-w-prose">
+  Jordan is an industry veteran with extensive experience in software packaging, distribution, and compliance.
+  Jordan's previous experiences include building the operating system for Cleversafe (now part of IBM Cloud)
+  storage appliances, GitHub Enterprise Server, and home automation hub firmware.
+</p>
