--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -4,39 +4,39 @@ import { Icon } from "astro-icon";
 
 const services = [
   {
-    title: "Your Choice Of Hardware",
+    title: "Embedded & IoT Firmware",
     description:
-      "Choose one of our supported development boards, or have us build an OS for the platform of your choice.",
+      "Let us build an OS for the platform of your choice. We have expertise with Yocto, Debian, and OpenWRT.",
     icon: "mdi:hammer",
   },
   {
     title: "Virtual Machines & Appliances",
     description:
-      "Build virtual appliances and deploy them to your own infrastructure or any of the major cloud providers.",
+      "We can build virtual appliances for your application, and automate deploying them to your own infrastructure or any of the major cloud providers.",
     icon: "mdi:ghost",
   },
   {
-    title: "Security Updates Included",
+    title: "Container Images",
     description:
-      "Stop worrying about updating the operating system on your devices and appliances; we'll take care of it, automatically.",
-    icon: "mdi:lock-check",
+      "Have us package your apps in containers and run them in the cloud or at the edge, with Docker, Podman, or Kubernetes.",
+    icon: "mdi:package-variant",
   },
   {
-    title: "Containers",
+    title: "Security Updates",
     description:
-      "Package your apps in containers and run them at the edge. Deploy your existing containers or let us build them for you.",
-    icon: "mdi:package-variant",
+      "Stop worrying about updating the operating system on your devices and appliances; have us build an automatic update system for you.",
+    icon: "mdi:lock-check",
   },
   {
     title: "Delta Updates",
     description:
-      "Stop wasting time and bandwidth and download only what has changed since the previous version. Rollback to previous versions without doubling your storage requirements.",
+      "Our updater downloads only what has changed since the previous version. Enable rolling back to previous versions without doubling your storage requirements.",
     icon: "mdi:shimmer",
   },
   {
     title: "No Cloud? No Problem!",
     description:
-      "Deploy our cloud on your infrastructure or connect to your existing services. Don't need cloud connectivity? That's fine too!",
+      "Deploy our Wireguard-based cloud connectivity solution on your infrastructure or connect to your existing services. Don't need cloud connectivity? That's fine too!",
     icon: "mdi:cloud-question",
   },
 ];
