Refresh content, add terms & rates

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -8,11 +8,20 @@ import ContentSection from "~/components/content-section.astro";
     and let us know what we can
     <span class="text-primary">build for you</span>.
   </Fragment>
+  <form action="https://calendly.com/jordan-caketop/30min">
+    <button
+    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full"
+    type="submit"
+    >Click here to book a free 30 minute inital consultation
+  </button>
+  </form>
+  <hr/>
   <form
     class="xl:w-4/12 l:w-6/12 md:w-8/12 w-10/12"
     action="https://submit-form.com/ZnF1nOju"
     data-botpoison-public-key="pk_14b6d75d-379c-42e7-9c35-731a053fcb79"
   >
+    <p>Not ready to book a meeting? Send us a note instead.</p>
     <div class="relative">
       <input
         type="text"
