--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,6 +5,8 @@ import ThemeSwitcher from "~/components/theme-switcher.astro";
 const navItems = [
   { title: "Services", url: "/#services" },
   { title: "Team", url: "/#team" },
+  { title: "Terms", url: "/#how" },
+  { title: "Rates", url: "/#rates" },
   { title: "Contact Us", url: "/#contact" },
 ];
 ---
