--- a/src/components/intro.astro
+++ b/src/components/intro.astro
@@ -3,14 +3,12 @@ import { Icon } from "astro-icon";
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Linux consulting for cloud and IoT" id="intro">
+<ContentSection title="Expert Linux consulting" id="intro">
   <Icon slot="eyebrow" name="logomark" class="h-32" />
   <Fragment slot="lead">
-    Caketop is a Linux consulting firm.
-    We specialize in creating <span class="text-primary">customized Linux operating systems</span>.
-    We can create optimized
-    <span class="text-primary">container images</span> or
-    <span class="text-primary">virtual appliances</span> for your app,
-    or <span class="text-primary">firmware</span> for your IoT device.
+    We specialize in
+    <span class="text-primary">containers</span>,
+    <span class="text-primary">virtual appliances</span>,
+    and <span class="text-primary">firmware</span> for embedded and IoT devices.
   </Fragment>
 </ContentSection>
