--- a/src/components/services.astro
+++ b/src/components/services.astro
@@ -18,7 +18,7 @@ const services = [
   {
     title: "Container Images",
     description:
-      "Have us package your apps in containers and run them in the cloud or at the edge, with Docker, Podman, or Kubernetes.",
+      "Have us build optimized container images for your app. Run them in the cloud or at the edge, with Docker, Podman, or Kubernetes.",
     icon: "mdi:package-variant",
   },
   {
@@ -28,16 +28,16 @@ const services = [
     icon: "mdi:lock-check",
   },
   {
-    title: "Delta Updates",
+    title: "Cloud Connectivity",
     description:
-      "Our updater downloads only what has changed since the previous version. Enable rolling back to previous versions without doubling your storage requirements.",
-    icon: "mdi:shimmer",
+      "We can create secure connections between your devices in the field and your infrastructure in the cloud using Wireguard, websockets, or SSH.",
+    icon: "mdi:cloud-question",
   },
   {
-    title: "No Cloud? No Problem!",
+    title: "Custom Development",
     description:
-      "Deploy our Wireguard-based cloud connectivity solution on your infrastructure or connect to your existing services. Don't need cloud connectivity? That's fine too!",
-    icon: "mdi:cloud-question",
+      "We can help you get started, or build your whole backend for you. We can build REST APIs, CI/CD pipelines, Home Assistant addons, and more!",
+    icon: "mdi:application-braces",
   },
 ];
 ---
