--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import Footer from "~/components/footer.astro";
 import Intro from "~/components/intro.astro";
 import Splash from "~/components/splash.astro";
 import Flipper from "~/components/flipper.astro";
+import Terms from "~/components/terms.astro";
+import Rates from "~/components/rates.astro";
 ---
 
 <Page>
@@ -18,6 +20,8 @@ import Flipper from "~/components/flipper.astro";
     <Intro />
     <Services />
     <Team />
+    <Terms />
+    <Rates />
     <Contact />
   </div>
   <Footer />
