Change site title

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -23,7 +23,7 @@ const description =
     <script src="https://unpkg.com/@botpoison/browser" async></script>
     <script defer data-domain="caketop.app" src="https://stats.caketop.app/js/plausible.js"></script>
 
-    <title>Caketop: Operating systems as a service</title>
+    <title>Caketop: Linux consulting specialising in containers, virtual machines, embedded, and IoT</title>
     <meta name="description" content={description} />
 
     <!-- fonts -->
@@ -47,7 +47,7 @@ const description =
     </noscript>
 
     <!-- social media -->
-    <meta property="og:title" content="Caketop: Operating systems as a service" />
+    <meta property="og:title" content="Caketop: Linux consulting specialising in containers, virtual machines, embedded, and IoT" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content={description} />
     <meta property="og:image" content={image} />
