Tweak flipper to fit "Home Assistant" on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Rates from "~/components/rates.astro";
 <Page>
   <Splash>
     Your app on <Flipper />
-    <br />like frosting on a cake
+    like frosting on a cake
   </Splash>
   <div class="px-8 py-32 space-y-24">
     <Intro />
