--- a/src/components/flipper.astro
+++ b/src/components/flipper.astro
@@ -84,6 +84,10 @@ const duration = String(rawDuration) + "s";
 <style define:vars={{ duration }}>
   .flipper-div {
     position: relative;
+    height: 2.2em;
+
+    display : flex;
+    align-items : center;
   }
 
   .flipper-item {
@@ -94,13 +98,12 @@ const duration = String(rawDuration) + "s";
     position: absolute;
     color: #90caf9;
     opacity: 0;
-    margin-left: auto;
-    margin-right: auto;
     left: 0;
     right: 0;
   }
+
 </style>
-<div>
+<div class="flipper-outer">
   <div class="flipper-div p-2">
     {
       platforms.map((platform, i) => (
