--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -5,7 +5,7 @@ import "~/styles/index.css";
 const { site } = Astro;
 const image = new URL("social.jpg", site);
 const description =
-  "Caketop is your one-stop shop for IoT firmware and virtual machine images. Stop worrying about your platform and focus on your app.";
+  "Caketop is your source for export Linux consulting. Specialists in containers, virtual machines, embedded, and IoT.";
 ---
 
 <html lang="en" class="h-full motion-safe:scroll-smooth" data-theme="dark">
