Mention SSH in terms

--- a/src/components/terms.astro
+++ b/src/components/terms.astro
@@ -21,7 +21,7 @@ import ContentSection from "~/components/content-section.astro";
     <li>All work is billed hourly and done remotely.
       <ul class="list-disc ml-6">
         <li>We will communicate with you via email, Zoom, Slack Connect, Discord, or phone.</li>
-        <li>We prefer to work on our own equipment, but are willing to work on yours via remote desktop software.
+        <li>We prefer to work on our own equipment, but are willing to work on yours via SSH or remote desktop software.
           Please note that use of remote desktop software will make things take longer and increase the number of billable hours.</li>
         </ul>
     </li>
