--- a/src/components/terms.astro
+++ b/src/components/terms.astro
@@ -5,13 +5,13 @@ import ContentSection from "~/components/content-section.astro";
 <ContentSection title="How we work" id="terms">
   <ol class="list-decimal max-w-prose">
     <li>Book a <a class="text-primary" href="https://calendly.com/jordan-caketop/30min">free 30 minute initial consultation</a>.</li>
-    <li>We will provide you with an estimate, which will include the number of billable hours.
+    <li>After your consultation, we will provide you with an estimate, which will include a number of billable hours.
       <ul class="list-disc ml-6">
         <li>This is only an estimate; you will be billed based on the actual number of hours worked.</li>
         <li>We will warn you before going over the estimated number of hours.</li>
       </ul>
     </li>
-    <li>After you approve the estimate, we will begin the work.
+    <li>After you approve the estimate and we receive your deposit, we will begin the work.
       <ul class="list-disc ml-6">
         <li>Jobs with estimates below $1,000 require no deposit.</li>
         <li>Jobs with estimates between $1,000 and $2,500 require a deposit of $500.</li>
@@ -20,17 +20,18 @@ import ContentSection from "~/components/content-section.astro";
     </li>
     <li>All work is billed hourly and done remotely.
       <ul class="list-disc ml-6">
-        <li>We will communicate with you via email, Zoom, Slack Connect, Discord, or phone.</li>
+        <li>We will communicate with you via Slack Connect, Discord, email, Zoom, or phone.</li>
         <li>We prefer to work on our own equipment, but are willing to work on yours via SSH or remote desktop software.
           Please note that use of remote desktop software will make things take longer and increase the number of billable hours.</li>
-        </ul>
+        <li>Our normal work hours are Monday through Friday, between 8:30 AM and 5:30 PM in US Central Time. (14:30 - 23:30 UTC)</li>
+      </ul>
     </li>
     <li>When the job is complete, we will send you an invoice via Stripe.
       <ul class="list-disc ml-6">
         <li>Payment is due 30 days after receipt of the invoice.</li>
-        <li>Any deposits will be deducted from your invoice.</li>
+        <li>Any deposits will be deducted from the final amount on your invoice.</li>
         <li>If you cancel a project in progress, you will be sent an invoice based on the number of hours worked thus far.</li>
-        <li>If your deposit exceeds the amount of your invoice, the remainder of your deposit will be refunded.</li>
+        <li>If your deposit exceeds the final amount on your invoice, the remainder of your deposit will be refunded.</li>
         <li>We accept most common forms of payment, including major credit cards, ACH transfers, SEPA Direct Debit, and Alipay.</li>
       </ul>
     </li>
