--- a/src/components/rates.astro
+++ b/src/components/rates.astro
@@ -33,6 +33,7 @@ import ContentSection from "~/components/content-section.astro";
     <li>Prioritization for your project</li>
     <li>Includes up to 5 hours of work per month</li>
     <li>Additional hours billed at $150 USD</li>
+    <li>Work billed in 30 minute increments</li>
     <li>Unused hours do not roll over between months</li>
   </ul>
 </ContentSection>
