Remove periods from "by the hour" list

--- a/src/components/rates.astro
+++ b/src/components/rates.astro
@@ -17,8 +17,8 @@ import ContentSection from "~/components/content-section.astro";
     </tr>
   </table>
   <ul class="max-w-prose list-disc">
-    <li>All jobs are billed at a minimum of 1 hour.</li>
-    <li>Work beyond the first hour is billed in 1 hour increments.</li>
+    <li>All jobs are billed at a minimum of 1 hour</li>
+    <li>Work beyond the first hour is billed in 1 hour increments</li>
   </ul>
   <table>
     <tr>
