--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -47,7 +47,7 @@ const description =
     </noscript>
 
     <!-- social media -->
-    <meta property="og:title" content="Caketop: Linux consulting specialising in containers, virtual machines, embedded, and IoT" />
+    <meta property="og:title" content="Caketop: Linux consulting" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content={description} />
     <meta property="og:image" content={image} />
