Change title of terms

--- a/src/components/terms.astro
+++ b/src/components/terms.astro
@@ -2,7 +2,7 @@
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="How we work" id="terms">
+<ContentSection title="How does it work?" id="terms">
   <ol class="list-decimal max-w-prose">
     <li>Book a <a class="text-primary" href="https://calendly.com/jordan-caketop/30min">free 30 minute initial consultation</a>.</li>
     <li>After your consultation, we will provide you with an estimate, which will include a number of billable hours.
