--- a/src/components/rates.astro
+++ b/src/components/rates.astro
@@ -2,7 +2,7 @@
 import ContentSection from "~/components/content-section.astro";
 ---
 
-<ContentSection title="Rates" id="rates">
+<ContentSection title="Pricing" id="rates">
   <table>
     <tr>
       <th colspan="2">By the hour</th>
