Make it bold so people will click on it

--- a/src/components/jordemort.astro
+++ b/src/components/jordemort.astro
@@ -18,6 +18,6 @@ import jordemort from "~/assets/jordemort.jpg";
 </figure>
 <p class="max-w-prose">
   Jordan is an industry veteran with extensive experience in software packaging, distribution, and compliance.
-  Jordan's <a href="https://jordemort.dev/portfolio/">previous experience</a> includes building the operating system for Cleversafe (now part of IBM Cloud)
+  Jordan's <b><a href="https://jordemort.dev/portfolio/">previous experience</a></b> includes building the operating system for Cleversafe (now part of IBM Cloud)
   storage appliances, GitHub Enterprise Server, and home automation hub firmware.
 </p>
